Minor JavaDoc cleanup and tweaks within the properties & related test classes, no functional changes
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@6378 51baf565-9d33-0410-a72c-fc3788e3496d